--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=Grent
-spring.datasource.url=jdbc:mysql://localhost:3306/grent
+jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=grent
 spring.datasource.username=sa
-spring.datasource.password=bcpass1312
-spring.jpa.hibernate.ddl-auto=update
-spring.spa.show-sql=true
+spring.datasource.password=Bcpass1312
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.hibernate.ddl-auto= update
+
